# bosh-kubernetes-cpi-release

./: .gitignore  .gitmodules  CONTRIBUTING.md  CPI.md  LICENSE  NOTICE  README.md
.final_builds/jobs/kubernetes_cpi/: index.yml
.final_builds/license/: index.yml
ci/: pipeline.yml
ci/docker/: build  run
ci/docker/ci-base/: Dockerfile
ci/docker/ci-bosh/: Dockerfile  install-ruby.sh
ci/docker/ci-gcloud/: Dockerfile  install-gcloud.sh
ci/docker/ci-kubectl/: Dockerfile  install-kubectl.sh
ci/docker/ci-stack/: Dockerfile  install-stack.sh
ci/docker/main-bosh/: Dockerfile
ci/docker/main-stack/: Dockerfile
ci/pipelines/ci-images/: pipeline.yml
ci/pipelines/kubernetes-stemcells/: pipeline.yml
ci/pipelines/kubernetes-stemcells/tasks/: build.sh  build.yml
ci/tasks/: build.sh  build.yml  compile.sh  compile.yml  create-env.sh  create-env.yml  create-release.sh  create-release.yml  delete-namespace.sh  delete-namespace.yml  finalize-release.sh  finalize-release.yml  prepare-namespace.sh  prepare-namespace.yml  run-bats.sh  run-bats.yml  test-unit.sh  test-unit.yml  utils.sh
ci/tasks/ops/: bosh-release-tarball.yml  cpi-release-tarball.yml  stemcell-tarball.yml
config/: blobs.yml  dev.yml  final.yml
dependencies/: prefetch.sh
deployment/gce/assets/: bosh-external-service.yml  bosh-internal-service.yml
deployment/gce/scripts/: create-env.sh
deployment/minikube/assets/: bosh-external-service.yml
deployment/minikube/scripts/: create-env.sh
docker/: Dockerfile
jobs/kubernetes_cpi/: spec
jobs/kubernetes_cpi/templates/: cpi.erb  cpi.json.erb
keys/: gmp.pub  haskell.pub  stack.pub
minikube/: persistent-disks.yml
minikube/scripts/: inner-bosh.sh  outer-bosh.sh
releases/bosh-kubernetes-cpi/: bosh-kubernetes-cpi-1-alpha.yml  bosh-kubernetes-cpi-2-alpha.yml  bosh-kubernetes-cpi-3-alpha.yml  bosh-kubernetes-cpi-4-alpha.yml  bosh-kubernetes-cpi-5.yml  bosh-kubernetes-cpi-6.yml  index.yml
src/bosh-kubernetes-cpi/: LICENSE  bosh-kubernetes-cpi-release.cabal  deps  stack.yaml
src/bosh-kubernetes-cpi/app/cpi/: Main.hs
src/bosh-kubernetes-cpi/src/: Resource.hs
src/bosh-kubernetes-cpi/src/CPI/: Base.hs  Kubernetes.hs
src/bosh-kubernetes-cpi/src/CPI/Base/: AgentConfig.hs  Errors.hs  Http.hs  Inputs.hs  Messages.hs  Networks.hs  Test.hs
src/bosh-kubernetes-cpi/src/CPI/Kubernetes/: Base64.hs  Config.hs  Http.hs  Model.hs  Networks.hs  Secrets.hs  VmPropertiesLens.hs  VmTypes.hs
src/bosh-kubernetes-cpi/src/CPI/Kubernetes/Action/: AttachDisk.hs  Common.hs  CreateDisk.hs  CreateVm.hs  DeleteDisk.hs  DeleteVm.hs  DetachDisk.hs
src/bosh-kubernetes-cpi/src/CPI/Kubernetes/Resource/: Metadata.hs  PersistentVolumeClaim.hs  Pod.hs  Secret.hs  Servant.hs  Service.hs
src/bosh-kubernetes-cpi/src/CPI/Kubernetes/Resource/Stub/: PersistentVolumeClaim.hs  Pod.hs  Secret.hs  Service.hs  State.hs
src/bosh-kubernetes-cpi/src/Control/Lens/Helper/: LensNames.hs
src/bosh-kubernetes-cpi/test/CPI/Kubernetes/: ConfigSpec.hs  VmTypesSpec.hs
src/bosh-kubernetes-cpi/test/stub/: PersistentVolumeClaimSpec.hs  PodSpec.hs  SecretSpec.hs  ServiceSpec.hs  StubRunner.hs
src/bosh-kubernetes-cpi/test/unit/CPI/Kubernetes/: Base64Spec.hs  ConfigSpec.hs  VmTypesSpec.hs
src/bosh-kubernetes-cpi/test/unit/CPI/Kubernetes/Action/: AttachDiskSpec.hs  CommonSpec.hs  CreateDiskSpec.hs  CreateVmSpec.hs  DeleteDiskSpec.hs  DeleteVmSpec.hs  DetachDiskSpec.hs
src/bosh-kubernetes-cpi/test/unit/CPI/Kubernetes/Resource/: PodSpec.hs
stemcell/: Dockerfile  agent.json  build.sh
