name:                bosh-kubernetes-cpi-release
version:             0.0.1.0
synopsis:            A BOSH Cloud Provider Interface for Kubernetes
description:         Please see README.md
homepage:            https://github.com/SAP/bosh-kubernetes-cpi-release#readme
license:             Apache
-- license-file:        LICENSE
author:              Jan von Löwenstein
maintainer:          jan.von.loewenstein@sap.com
copyright:           2016 SAP SE
category:            Cloud
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  -- ghc-options:        -Wall
  default-extensions:  OverloadedStrings
  hs-source-dirs:      src
  exposed-modules:     CPI.Kubernetes
                     , CPI.Kubernetes.Http
                     , CPI.Kubernetes.Config
                     , CPI.Kubernetes.Model
                     , CPI.Kubernetes.Networks
                     , CPI.Kubernetes.VmTypes
                     , CPI.Kubernetes.Secrets
  build-depends:       base >= 4.7 && < 5
                     , haskell-bosh-cpi
                     , mtl
                     , aeson
                     , lens-aeson
                     , yaml
                     , text
                     , bytestring
                     , base64-bytestring
                     , containers
                     , unordered-containers
                     , exceptions
                     , haskell-kubernetes
                     , servant
                     , servant-client
                     , http-types
                     , http-client
                     , http-client-tls
                     , tls
                     , connection
                     , x509
                     , data-default-class
                     , lens
                     , logging-effect
                     , wl-pprint-text
  default-language:    Haskell2010

executable bosh-kubernetes-cpi
  hs-source-dirs:      app/cpi
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bosh-kubernetes-cpi-release
                     , haskell-bosh-cpi
  default-language:    Haskell2010

test-suite bosh-kubernetes-cpi-release-test
  type:                exitcode-stdio-1.0
  default-extensions:  OverloadedStrings
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       CPI.Kubernetes.VmTypesSpec
  build-depends:       base
                     , hspec
                     , aeson-qq
                     , raw-strings-qq
                     , safe-exceptions
                     , haskell-bosh-cpi
                     , bosh-kubernetes-cpi-release
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SAP/bosh-kubernetes-cpi-release
