name:                bosh-kubernetes-cpi-release
version:             0.0.1.0
synopsis:            A BOSH Cloud Provider Interface for Kubernetes
description:         Please see README.md
homepage:            https://github.com/SAP/bosh-kubernetes-cpi-release#readme
license:             Apache
-- license-file:        LICENSE
author:              Jan von Löwenstein
maintainer:          jan.von.loewenstein@sap.com
copyright:           2016 SAP SE
category:            Cloud
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  -- ghc-options:        -Wall
  default-extensions:  OverloadedStrings
  hs-source-dirs:      src
  exposed-modules:     CPI.Kubernetes
                     , CPI.Kubernetes.Http
                     , CPI.Kubernetes.Config
                     , CPI.Kubernetes.Model
                     , CPI.Kubernetes.Networks
                     , CPI.Kubernetes.VmTypes
                     , CPI.Kubernetes.Secrets
                     , CPI.Kubernetes.Action.CreateVm
                     , Resource
                     , CPI.Kubernetes.Resource.Servant
                     , CPI.Kubernetes.Resource.Pod
                     , CPI.Kubernetes.Resource.Secret
                     , CPI.Kubernetes.Resource.Metadata
                     , CPI.Kubernetes.Resource.Stub.State
                     , CPI.Kubernetes.Resource.Stub.Pod
                     , CPI.Kubernetes.Resource.Stub.Secret
  build-depends:       base >= 4.7 && < 5
                     , bosh-cpi-haskell
                     , mtl
                     , hourglass
                     , aeson
                     , lens-aeson
                     , yaml
                     , text
                     , bytestring
                     , base64-bytestring
                     , containers
                     , unordered-containers
                     , exceptions
                     , safe-exceptions
                     , haskell-kubernetes
                     , servant
                     , servant-client
                     , http-types
                     , http-client
                     , http-client-tls
                     , tls
                     , connection
                     , x509
                     , data-default-class
                     , lens
                     , logging-effect
                     , wl-pprint-text
  default-language:    Haskell2010

executable bosh-kubernetes-cpi
  hs-source-dirs:      app/cpi
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bosh-kubernetes-cpi-release
                     , bosh-cpi-haskell
  default-language:    Haskell2010

test-suite unit
  type:                exitcode-stdio-1.0
  default-extensions:  OverloadedStrings
                     , ScopedTypeVariables
  hs-source-dirs:      test/unit
  main-is:             Spec.hs
  other-modules:       CPI.Kubernetes.VmTypesSpec
                     , CPI.Kubernetes.ConfigSpec
                     , CPI.Kubernetes.Action.CreateVmSpec
  build-depends:       base
                     , hspec
                     , aeson-qq
                     , lens-aeson
                     , raw-strings-qq
                     , safe-exceptions
                     , bosh-cpi-haskell
                     , haskell-kubernetes
                     , bosh-kubernetes-cpi-release
                     , servant-client
                     , bytestring
                     , base64-bytestring
                     , aeson
                     , lens
                     , text
                     , mtl
                     , unordered-containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite stub
  type:                exitcode-stdio-1.0
  default-extensions:  OverloadedStrings
  hs-source-dirs:      test/stub
  main-is:             Spec.hs
  other-modules:       PodSpec
                     , SecretSpec
  build-depends:       base
                     , hspec
                     , http-types
                     , aeson-qq
                     , raw-strings-qq
                     , safe-exceptions
                     , bosh-cpi-haskell
                     , bosh-kubernetes-cpi-release
                     , servant-client
                     , bytestring
                     , aeson
                     , lens
                     , text
                     , mtl
                     , unordered-containers
                     , tls
                     , haskell-kubernetes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SAP/bosh-kubernetes-cpi-release
